force-app/main/default/objects/Invoice_Item__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <inlineHelpText>Valor obtenido automáticamente, no se requiere entrada manual.</inlineHelpText>
    <label>Discount (Amount)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>