force-app/main/default/objects/Invoice_Item__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <inlineHelpText>Valor obtenido automáticamente, no se requiere entrada manual.</inlineHelpText>
    <label>Discount (Percentage)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>