force-app/main/default/objects/Invoice_Item__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>IF(
	AND(
		ISBLANK(Discount_Amount__c),
		ISBLANK(Discount_Percentage__c)
	),
	Quantity__c *  Unit_Price__c,
	IF(
		NOT(ISBLANK(Discount_Percentage__c)),
		CEILING((Quantity__c *  Unit_Price__c) - ((Quantity__c *  Unit_Price__c) * Discount_Percentage__c)),
		IF(
			NOT(ISBLANK(Discount_Amount__c)),
			(Quantity__c * Unit_Price__c) - Discount_Amount__c,
			Quantity__c *  Unit_Price__c
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>