force-app/main/default/objects/Invoice_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <inlineHelpText>Valor calculado automáticamente, no hace falta la entrada manual.</inlineHelpText>
    <label>Unit Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>